--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,8 @@
 name: Build
 
 on:
-  pull_request:
+  push:
+    branches: [ main ]
 
 env:
   JAVA_VERSION: '11'
@@ -13,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [windows-latest]
     runs-on: ${{ matrix.os }}
     if: startsWith(github.event.head_commit.message, 'Releasing version') != true
 
