--- a/.github/workflows/early-access.yml
+++ b/.github/workflows/early-access.yml
@@ -13,7 +13,7 @@ env:
 jobs:
   precheck:
     name: Precheck
-    if: github.repository == 'jreleaser/jreleaser' && startsWith(github.event.head_commit.message, 'Releasing version') != true
+    if: startsWith(github.event.head_commit.message, 'Releasing version') != true
     runs-on: ubuntu-latest
     outputs:
       VERSION: ${{ steps.vars.outputs.VERSION }}
